[package]
name = "siderite"
version = "0.1.0"
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-tungstenite = { version = "0.13", features = ["tokio-runtime", "tokio-rustls"]}
futures = "0.3"
tokio = { version = "1.4", features = ["full"]}
tokio-rustls = "0.22"
tokio-stream = "0.1.5"
ring = "0.16"
rustls-native-certs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"


