[package]
name = "siderite"
version = "0.1.0"
authors = ["Maxime Augier <max@xolus.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Meteor DDP client library"
readme = "README.md"
repository = "https://github.com/maugier/siderite/"
homepage = "https://github.com/maugier/siderite/"
keywords = ["meteor", "ddp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-tungstenite = { version = "0.13", features = ["tokio-runtime", "tokio-rustls"]}
futures = "0.3"
tokio = { version = "1.4", features = ["full"]}
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slab = "0.4"


